[package]
name = "blossom"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "blossom"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
dotenvy = "^0.15"
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
time = "0.3.34"
tokio = { version = "1.10.0", features = ["full"] }
url = "2.5.0"
wnfs = "0.2.1"
object_store = "0.9.1"
ollama-rs = { version = "0.1.8", features = ["stream"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = [
  "std-future",
] }
tracing-subscriber = { version = "^0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "local-time",
  "time",
  "tracing",
] }
tokio-util = "0.7.10"
chromadb = "0.4.4"
